welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: ')' expected but ';' found.
} while (!estSurBlanc();) 
                       ^Program:3: error: illegal start of statement
} while (!estSurBlanc();) 
                        ^